--- a/index.html
+++ b/index.html
@@ -347,6 +347,9 @@
             display: flex;
             align-items: center;
             gap: 16px;
+            flex-shrink: 0;
+            max-width: 100%;
+            overflow: hidden;
         }
 
         .player-album-art {
@@ -366,6 +369,8 @@
             flex-direction: column;
             gap: 4px;
             min-width: 0;
+            flex: 1;
+            overflow: hidden;
         }
 
         .player-track-name {
@@ -374,6 +379,16 @@
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
+            max-width: 100%;
+        }
+
+        .player-track-name.scrolling {
+            animation: marquee 8s linear infinite;
+        }
+
+        @keyframes marquee {
+            0%, 20% { transform: translateX(0); }
+            80%, 100% { transform: translateX(calc(-100% + 150px)); }
         }
 
         .player-track-artist {
@@ -382,6 +397,7 @@
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
+            max-width: 100%;
         }
 
         .player-controls {
@@ -532,20 +548,27 @@
 
             .player-track-info {
                 gap: 12px;
+                max-width: 100%;
             }
 
             .player-album-art {
-                width: 48px;
-                height: 48px;
-                font-size: 20px;
+                width: 44px;
+                height: 44px;
+                font-size: 18px;
+            }
+
+            .player-track-details {
+                max-width: calc(100% - 56px);
             }
 
             .player-track-name {
                 font-size: 13px;
+                max-width: 100%;
             }
 
             .player-track-artist {
                 font-size: 11px;
+                max-width: 100%;
             }
 
             .player-controls {
@@ -2383,7 +2406,9 @@ IMPORTANT:
             };
 
             tracks.push(newTrack);
-            showNotification(`Added "${song.name}" by ${song.artist}`);
+            // Save to IndexedDB for persistence
+            saveTrackToDB(newTrack).catch(console.error);
+            showNotification(`Added "${song.name}" (Saved to library!)`);
 
             // Re-render search results to update button state
             displaySearchResults(currentSearchResults);
@@ -3153,32 +3178,44 @@ IMPORTANT:
             });
         }
 
-        async function saveTrackToDB(track, audioBlob = null) {
+        async function saveTrackToDB(track, audioBlobUrl = null) {
             if (!db) await openDatabase();
 
-            return new Promise((resolve, reject) => {
-                const transaction = db.transaction(['tracks', 'audioFiles'], 'readwrite');
+            // Save track metadata (without blob URL which isn't persistable)
+            const trackData = { ...track };
+            delete trackData.audioBlob; // Remove blob URL, we'll recreate it
+            trackData.hasAudioFile = !!audioBlobUrl;
 
-                // Save track metadata (without blob URL which isn't persistable)
-                const trackData = { ...track };
-                delete trackData.audioBlob; // Remove blob URL, we'll recreate it
-                trackData.hasAudioFile = !!audioBlob;
-
+            // First save track metadata
+            await new Promise((resolve, reject) => {
+                const transaction = db.transaction(['tracks'], 'readwrite');
                 transaction.objectStore('tracks').put(trackData);
+                transaction.oncomplete = () => resolve();
+                transaction.onerror = () => reject(transaction.error);
+            });
 
-                // Save audio file if provided
-                if (audioBlob) {
-                    // Convert blob URL to actual blob for storage
-                    fetch(audioBlob)
-                        .then(r => r.blob())
-                        .then(blob => {
-                            transaction.objectStore('audioFiles').put({
-                                trackId: track.id,
-                                blob: blob
-                            });
-                        })
-                        .catch(console.error);
+            // Then save audio file if provided (in separate transaction)
+            if (audioBlobUrl) {
+                try {
+                    const response = await fetch(audioBlobUrl);
+                    const blob = await response.blob();
+
+                    await new Promise((resolve, reject) => {
+                        const transaction = db.transaction(['audioFiles'], 'readwrite');
+                        transaction.objectStore('audioFiles').put({
+                            trackId: track.id,
+                            blob: blob
+                        });
+                        transaction.oncomplete = () => {
+                            console.log(`💾 Saved audio file for track ${track.id}`);
+                            resolve();
+                        };
+                        transaction.onerror = () => reject(transaction.error);
+                    });
+                } catch (e) {
+                    console.error('Failed to save audio blob:', e);
                 }
+            }
 
                 transaction.oncomplete = () => resolve();
                 transaction.onerror = () => reject(transaction.error);
@@ -3483,10 +3520,15 @@ IMPORTANT:
                         tracks.splice(index, 1);
                     }
 
+                    // Remove from IndexedDB
+                    deleteTrackFromDB(trackId).catch(console.error);
+
                     // Remove from all playlists
                     playlists.forEach(playlist => {
                         playlist.tracks = playlist.tracks.filter(id => id !== trackId);
                     });
+                    // Save updated playlists
+                    savePlaylistsToDB(playlists).catch(console.error);
 
                     // Re-render
                     renderTracks();
