--- a/index.html
+++ b/index.html
@@ -1306,7 +1306,7 @@
         <div class="main-content">
             <!-- Sidebar -->
             <div class="sidebar" id="sidebar">
-                <div class="logo">MAYA WORLD MUSIC <small style="font-size: 10px; opacity: 0.5;">v3.4</small></div>
+                <div class="logo">MAYA WORLD MUSIC <small style="font-size: 10px; opacity: 0.5;">v3.5</small></div>
 
                 <div class="nav-section">
                     <div class="nav-item active" data-view="home">
@@ -1635,34 +1635,57 @@
             console.log('📱 Media Session updated for background playback');
         }
 
+        // Check if IndexedDB is available
+        let indexedDBAvailable = false;
+
+        async function checkIndexedDB() {
+            try {
+                // Test if IndexedDB works
+                const testRequest = indexedDB.open('test', 1);
+                await new Promise((resolve, reject) => {
+                    testRequest.onerror = () => reject(testRequest.error);
+                    testRequest.onsuccess = () => {
+                        testRequest.result.close();
+                        indexedDB.deleteDatabase('test');
+                        resolve();
+                    };
+                });
+                indexedDBAvailable = true;
+                console.log('✅ IndexedDB available');
+                return true;
+            } catch (e) {
+                indexedDBAvailable = false;
+                console.log('⚠️ IndexedDB not available - songs will not persist');
+                return false;
+            }
+        }
+
         // Initialize
         async function init() {
-            // Load saved data from IndexedDB
-            try {
-                await openDatabase();
+            // Check if IndexedDB works in this context
+            const dbAvailable = await checkIndexedDB();
 
-                const savedTracks = await loadTracksFromDB();
-                if (savedTracks && savedTracks.length > 0) {
-                    tracks = savedTracks;
-                    // Update nextTrackId to avoid conflicts
-                    nextTrackId = Math.max(...tracks.map(t => t.id)) + 1;
-                    console.log(`📂 Loaded ${savedTracks.length} saved songs from library`);
-                }
+            // Load saved data from IndexedDB only if available
+            if (dbAvailable) {
+                try {
+                    await openDatabase();
 
-                const savedPlaylists = await loadPlaylistsFromDB();
-                if (savedPlaylists && savedPlaylists.length > 0) {
-                    playlists = savedPlaylists;
-                    nextPlaylistId = Math.max(...playlists.map(p => p.id)) + 1;
-                    console.log(`📂 Loaded ${savedPlaylists.length} saved playlists`);
-                }
+                    const savedTracks = await loadTracksFromDB();
+                    if (savedTracks && savedTracks.length > 0) {
+                        tracks = savedTracks;
+                        nextTrackId = Math.max(...tracks.map(t => t.id)) + 1;
+                        console.log(`📂 Loaded ${savedTracks.length} saved songs from library`);
+                    }
 
-                // Load API key from IndexedDB (fallback to cookie)
-                const savedApiKey = await getSettingFromDB('youtubeApiKey');
-                if (savedApiKey) {
-                    youtubeApiKey = savedApiKey;
+                    const savedPlaylists = await loadPlaylistsFromDB();
+                    if (savedPlaylists && savedPlaylists.length > 0) {
+                        playlists = savedPlaylists;
+                        nextPlaylistId = Math.max(...playlists.map(p => p.id)) + 1;
+                        console.log(`📂 Loaded ${savedPlaylists.length} saved playlists`);
+                    }
+                } catch (e) {
+                    console.log('Error loading from IndexedDB:', e);
                 }
-            } catch (e) {
-                console.log('IndexedDB not available, using defaults:', e);
             }
 
             renderTracks();
@@ -3179,6 +3202,10 @@ IMPORTANT:
         }
 
         async function saveTrackToDB(track, audioBlobUrl = null) {
+            if (!indexedDBAvailable) {
+                console.log('⚠️ Cannot save track - IndexedDB not available');
+                return;
+            }
             if (!db) await openDatabase();
 
             // Save track metadata (without blob URL which isn't persistable)
@@ -3255,7 +3282,7 @@ IMPORTANT:
         }
 
         async function deleteTrackFromDB(trackId) {
-            if (!db) await openDatabase();
+            if (!indexedDBAvailable || !db) return;
 
             return new Promise((resolve, reject) => {
                 const transaction = db.transaction(['tracks', 'audioFiles'], 'readwrite');
@@ -3267,6 +3294,7 @@ IMPORTANT:
         }
 
         async function savePlaylistsToDB(playlistsData) {
+            if (!indexedDBAvailable) return;
             if (!db) await openDatabase();
 
             return new Promise((resolve, reject) => {
@@ -3563,7 +3591,7 @@ IMPORTANT:
         }
 
         // Initialize app
-        console.log('🎵 Maya World Music v3.4 loaded!');
+        console.log('🎵 Maya World Music v3.5 loaded!');
         console.log('✅ Features: MP3 Upload, Preview, Settings, Background Playback');
         console.log('YouTube API Key:', youtubeApiKey ? '✅ Set (' + youtubeApiKey.substring(0, 10) + '...)' : '⚠️ Not set (go to Settings to add)');
         init();
