--- a/index.html
+++ b/index.html
@@ -1306,7 +1306,7 @@
         <div class="main-content">
             <!-- Sidebar -->
             <div class="sidebar" id="sidebar">
-                <div class="logo">MAYA WORLD MUSIC <small style="font-size: 10px; opacity: 0.5;">v3.6</small></div>
+                <div class="logo">MAYA WORLD MUSIC <small style="font-size: 10px; opacity: 0.5;">v3.7</small></div>
 
                 <div class="nav-section">
                     <div class="nav-item active" data-view="home">
@@ -1438,24 +1438,11 @@
     </div>
 
     <script>
-        // Sample tracks data
-        let tracks = [
-            { id: 1, name: 'Midnight Echo', artist: 'Neon Dreams', duration: 243, frequency: 440, liked: false, youtubeId: null },
-            { id: 2, name: 'Digital Sunrise', artist: 'Synth Wave', duration: 198, frequency: 523.25, liked: false, youtubeId: null },
-            { id: 3, name: 'Cosmic Journey', artist: 'Space Riders', duration: 267, frequency: 329.63, liked: false, youtubeId: null },
-            { id: 4, name: 'Electric Heart', artist: 'Pulse', duration: 215, frequency: 392, liked: false, youtubeId: null },
-            { id: 5, name: 'Neon Nights', artist: 'Retrowave', duration: 189, frequency: 493.88, liked: false, youtubeId: null },
-            { id: 6, name: 'Future Memories', artist: 'Chrome Dreams', duration: 234, frequency: 261.63, liked: false, youtubeId: null },
-            { id: 7, name: 'Velocity', artist: 'Fast Lane', duration: 201, frequency: 587.33, liked: false, youtubeId: null },
-            { id: 8, name: 'Aurora', artist: 'Northern Lights', duration: 256, frequency: 349.23, liked: false, youtubeId: null }
-        ];
+        // Tracks data - starts empty, user adds real songs
+        let tracks = [];
 
-        // Playlists
-        let playlists = [
-            { id: 1, name: 'Chill Vibes', tracks: [1, 3, 6] },
-            { id: 2, name: 'Workout Mix', tracks: [4, 5, 7] },
-            { id: 3, name: 'Focus Flow', tracks: [2, 6, 8] }
-        ];
+        // Playlists - starts empty
+        let playlists = [];
 
         // Settings (stored in cookies since localStorage doesn't work in iframe)
         let youtubeApiKey = getCookie('ytApiKey') || '';
@@ -1470,8 +1457,8 @@
         let currentView = 'home';
         let currentPlaylist = null;
         let searchQuery = '';
-        let nextTrackId = 9;
-        let nextPlaylistId = 4;
+        let nextTrackId = 1;
+        let nextPlaylistId = 1;
 
         // Web Audio API
         let audioContext = null;
@@ -1759,11 +1746,20 @@
             const displayTracks = getTracksToDisplay();
 
             if (displayTracks.length === 0) {
+                const emptyMessage = searchQuery
+                    ? '<p>Try a different search term</p>'
+                    : `<p style="margin-bottom: 16px;">To add music:</p>
+                       <div style="text-align: left; display: inline-block; margin-bottom: 20px;">
+                           <p style="margin: 8px 0;"><strong>Option 1:</strong> Upload MP3 files (Ad-Free!)</p>
+                           <p style="margin: 8px 0; font-size: 12px; opacity: 0.7;">Menu → Add Song Manually → Upload MP3</p>
+                           <p style="margin: 16px 0 8px;"><strong>Option 2:</strong> Search YouTube</p>
+                           <p style="margin: 8px 0; font-size: 12px; opacity: 0.7;">Menu → Settings → Add YouTube API Key, then Search</p>
+                       </div>`;
                 tracksGrid.innerHTML = `
                     <div class="empty-state">
                         <i class="fas fa-music"></i>
-                        <h3>No songs found</h3>
-                        <p>${searchQuery ? 'Try a different search term' : 'Add some songs to get started'}</p>
+                        <h3>${searchQuery ? 'No songs found' : 'Welcome to Maya World Music!'}</h3>
+                        ${emptyMessage}
                     </div>
                 `;
                 return;
@@ -2550,6 +2546,10 @@ IMPORTANT:
         // Toggle play/pause
         function togglePlay() {
             if (!currentTrack) {
+                if (tracks.length === 0) {
+                    showNotification('No songs in library. Add some music first!');
+                    return;
+                }
                 playTrack(tracks[0].id);
                 return;
             }
@@ -2610,37 +2610,30 @@ IMPORTANT:
                     startYouTubeProgressUpdate();
                 } catch (e) {
                     console.error('YouTube playback failed:', e);
-                    startOscillatorPlayback();
+                    showPlaybackError();
                 }
+            } else if (currentTrack.youtubeId && !youtubeReady) {
+                // YouTube track but player not ready
+                showNotification('YouTube player is loading. Please try again.');
+                console.log('YouTube player not ready yet');
             } else {
-                startOscillatorPlayback();
+                // No audio source available
+                showPlaybackError();
             }
         }
 
-        // Start oscillator playback (fallback)
-        function startOscillatorPlayback() {
-            if (!audioContext) {
-                audioContext = new (window.AudioContext || window.webkitAudioContext)();
+        // Show playback error
+        function showPlaybackError() {
+            let message = 'Cannot play this track. ';
+            if (!currentTrack.youtubeId && !currentTrack.audioBlob) {
+                message += 'No audio source available.';
+            } else if (currentTrack.youtubeId && !youtubeReady) {
+                message += 'YouTube player not ready.';
+            } else {
+                message += 'Try adding a new song.';
             }
-
-            stopAudio();
-
-            oscillator = audioContext.createOscillator();
-            gainNode = audioContext.createGain();
-
-            oscillator.type = 'sine';
-            oscillator.frequency.setValueAtTime(currentTrack.frequency, audioContext.currentTime);
-
-            gainNode.gain.setValueAtTime(volume * 0.3, audioContext.currentTime);
-
-            oscillator.connect(gainNode);
-            gainNode.connect(audioContext.destination);
-
-            oscillator.start();
-
-            isPlaying = true;
-            updatePlayButtonUI();
-            startProgressUpdate();
+            showNotification(message);
+            console.log('Playback error:', message);
         }
 
         // Pause playback
@@ -2813,7 +2806,7 @@ IMPORTANT:
 
         // Play next
         function playNext() {
-            if (!currentTrack) return;
+            if (!currentTrack || tracks.length === 0) return;
 
             let nextIndex;
             if (isShuffle) {
@@ -2823,12 +2816,14 @@ IMPORTANT:
                 nextIndex = (currentIndex + 1) % tracks.length;
             }
 
-            playTrack(tracks[nextIndex].id);
+            if (tracks[nextIndex]) {
+                playTrack(tracks[nextIndex].id);
+            }
         }
 
         // Play previous
         function playPrevious() {
-            if (!currentTrack) return;
+            if (!currentTrack || tracks.length === 0) return;
 
             if (currentTime > 3) {
                 currentTime = 0;
@@ -2838,7 +2833,9 @@ IMPORTANT:
 
             const currentIndex = tracks.findIndex(t => t.id === currentTrack.id);
             const prevIndex = (currentIndex - 1 + tracks.length) % tracks.length;
-            playTrack(tracks[prevIndex].id);
+            if (tracks[prevIndex]) {
+                playTrack(tracks[prevIndex].id);
+            }
         }
 
         // Seek track
@@ -3606,7 +3603,7 @@ IMPORTANT:
         }
 
         // Initialize app
-        console.log('🎵 Maya World Music v3.6 loaded!');
+        console.log('🎵 Maya World Music v3.7 loaded!');
         console.log('✅ Features: MP3 Upload, Preview, Settings, Background Playback');
         console.log('YouTube API Key:', youtubeApiKey ? '✅ Set (' + youtubeApiKey.substring(0, 10) + '...)' : '⚠️ Not set (go to Settings to add)');
 
